--- a/style.css
+++ b/style.css
@@ -9,42 +9,30 @@ body{
     src: url('BaskervilleBoldBT.woff') format('woff');
   }
 
+  
 
-.number{
-    margin-top: -20rem;
-    margin-bottom: -20rem;
+.flex-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    list-style-type: none;
+    margin: -100px;
+    padding: 0;
+}
+
+.flex-list li{
     font-family: 'Baskerville';
-    font-size: 16rem;
-    color: white;
-    letter-spacing: 15px;
-    text-align: center;
-    
+    font-size: 14rem;
+    color: rgb(252, 250, 250);
+    margin: 0;
+    padding: 10px;
 }
 
-.III1{
-    margin-top: -23rem;
-    letter-spacing: -16px;
-}
 
-.III2{
-    margin-top: -23rem;
-    letter-spacing: -28px;
-}
+  a:hover {
+    color: rgb(33, 30, 235);
+  }
 
-.IV1{
-    margin-top: -23rem;
-    letter-spacing: -40px;
-}
-
-.V1{
-    margin-top: -23rem;
-    letter-spacing: -40px;
-}
-
-.VI1{
-    margin-top: -23rem;
-    letter-spacing: -40px;
-}
 
 #title{
     color: white;
@@ -81,17 +69,49 @@ body{
     color: rgb(154, 163, 243);
 }
 
-a:link {
-    text-decoration: none;
-  }
-  
-a:visited {
-    color: rgb(249, 250, 249);
-  }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 767px) {
+    body{
+        background-color: rgb(248, 244, 244);
+    }
 
-  a:hover {
-    color: rgb(33, 30, 235);
-  }
+    .flex-list{
+        margin: -71px;
+        overflow: hidden;
+    }
+
+    .flex-list li{
+        font-family: 'Baskerville';
+        font-size: 9rem;
+        color: rgb(8, 8, 8);
+        margin: 0;
+        padding: 10px;
+    }
+    .scroll{
+        margin-top: 10rem;
+       left: 5px;
+       width: 6rem;
+       height: 25rem;
+    }
+
+    .scrolltext{
+        font-size: 0.7rem;
+    }
+
+    #title{
+        font-size: 1.5rem;
+    }
+
+    #author{
+        font-size: 0.9rem;
+    }
+
+    a:hover {
+        color: rgb(8, 8, 8);
+      }
+
+    }
+
   
 
  
