--- a/style3.css
+++ b/style3.css
@@ -126,3 +126,59 @@ body{
   text-align: justify;
   text-indent: 50px;
 }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 767px) {
+
+  ul{
+    margin: -75px;
+    padding: 57px;
+  }
+
+  li{
+    padding:22px;
+    margin-top: 1rem;
+    display: inline-block;
+  }
+
+  h1{
+    font-size: 4rem;
+  }
+  
+.main{
+  margin-top: -1.5rem;
+  margin-left: 0rem;
+  font-size: 1rem;
+}
+
+.note1{
+  font-size: 2rem;
+  position: relative;
+  margin-top: 0rem;
+  left: 0;
+  width: 21rem;
+  height: 14rem;
+}
+.main2{
+  margin-top: 1rem;
+    margin-left: 0rem;
+    font-size: 1rem;
+    text-align: end;
+}
+
+.note2{
+  font-size: 2rem;
+  position: unset;
+  margin-top: 1rem;
+  width: 21rem;
+  height: 10rem;
+}
+
+.main3{
+  margin-top: 1rem;
+  margin-left: 0rem;
+  font-size: 1rem;
+  text-align: end;
+}
+
+}
